# crossposter

./: .pre-commit-config.yaml  Dockerfile  README.md  bump_version.py  main.py  pyproject.toml
.github/workflows/: autofix.yml
src/: main.py
