[project]
name = "crossposter"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.61",
    "dotenv>=0.9.9",
    "mastodon-py>=2.0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "CPY",    # flake8-copyright
    "PGH003", # Use specific error codes when using noqa
]

[dependency-groups]
dev = [
    "gitpython>=3.1.45",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "semver>=3.0.4",
]
