[project]
name = "crossposter"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["atproto>=0.0.65", "mastodon-py>=2.1.4"]

[dependency-groups]
dev = [
  "gitpython>=3.1.46",
  "mypy>=1.19.1",
  "prek>=0.3.2",
  "ruff>=0.15.0",
  "semver>=3.0.4",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "D",   # pydocstyle
  "CPY", # flake8-copyright
]


[tool.mypy]
strict = true
